--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.23",
     "next": "^14.1.0",
